# diploma

./: .gitignore  CMakeLists.txt  README.md
assets/: analysis.ipynb  config.toml
source/: ssg_visco.cpp  temp.cpp
